# server.js
@@ -1,7 +1,7 @@
 const express = require('express');
 const bodyParser = require('body-parser');
 const mongodb = require('./db/connect');
-const port = process.env.PORT || 8080;
+const port = process.env.PORT || 3410;
 const app = express();
 
 app
